--- a/content/discussion.tex
+++ b/content/discussion.tex
@@ -2,16 +2,16 @@
 
 \chapter{Discussion\label{chap:discussion}}
 
-...existing code...
+\todo{}
 
 \section{Framework Benefits}
 
-% Your content here.
+\todo{}
 
 \section{Possibilities for Extension}
 
-% Your content here.
+\todo{}
 
 \section{Framework Limitations}
 
-% Your content here.
+\todo{}
