--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -5,7 +5,9 @@
 \acro{CTU}[CTU]{Czech Technical University}
 \acro{BDD}[BDD]{Behavior-Driven Development}
 \acro{BOA}[BOA]{Business Objective Action}
-
+\acro{WPF}[WPF]{Windows Presentation Foundation}
+\acro{WinUI}[WinUI]{Windows UI Library}
+\acro{MAUI}[MAUI]{Multi-platform App UI}
 
 \acro{API}[API]{Application Programming Interface}
 \acro{DOF}[DOF]{degree-of-freedom}
