--- a/src/abstract_en.tex
+++ b/src/abstract_en.tex
@@ -7,7 +7,7 @@
 \section*{Abstract}
 \vskip 0.5em
 
-The study of autonomous \acp{UAV} has become a prominent sub-field of mobile robotics.
+\todo{}
 
 \vskip 1em
 
