--- a/src/abstrakt_cz.tex
+++ b/src/abstrakt_cz.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../main.tex
+v%!TEX root = ../main.tex
 
 \begin{changemargin}{0.8cm}{0.8cm}
 
@@ -8,7 +8,7 @@
 \vskip 0.5em
 
 \sloppy
-Výzkum na poli autonomních bezpilotních prostředků (UAV) se stal významným oborem mobilní robotiky.
+todo{}
 
 \vskip 1em
 
